# ClashForAndroid

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE  PRIVACY_POLICY.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01-bug-report-en.md  01-bug-report-en.yml  02-feature-request-en.md  02-feature-request-en.yml  03-bug-report-zh-cn.md  03-bug-report-zh-cn.yml  04-feature-request-zh-cn.md  04-feature-request-zh-cn.yml
.github/workflows/: build-unsigned.yaml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
buildSrc/: build.gradle  build.gradle.kts
buildSrc/src/main/java/: Build.kt  Dependencies.kt  Files.kt  GolangBuildOptions.kt  GolangBuildTask.kt  LibraryGolangPlugin.kt  MMDBDowloadTask.kt
common/: build.gradle.kts
common/src/main/: AndroidManifest.xml
core/: build.gradle  build.gradle.kts  consumer-rules.pro
core/src/foss/go/: go.mod  go.sum  proxy.go
core/src/foss/golang/: go.mod  go.sum  main.go
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  bridge_helper.c  bridge_helper.h  jni_helper.c  jni_helper.h  main.c
core/src/main/golang/: app.go  bridge.c  bridge.h  config.go  go.mod  go.sum  init.go  load.go  log.go  (+5 more)
design/: build.gradle.kts
design/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hideapi/: build.gradle.kts
hideapi/src/main/: AndroidManifest.xml
service/: build.gradle  build.gradle.kts
service/src/main/: AndroidManifest.xml
(+597 files in other folders)
